apps/keycloak/base/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway
  hostnames:
    - "keycloak.k8tre.${ENVIRONMENT}.${DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-keycloakx-http
          namespace: keycloak
          port: 80
